# hmc-linear-systems

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.TXT  aux.cpp  aux.hpp  auxiliary.cpp  auxiliary.hpp  euler-setup.txt  findings.txt  generateDocumentationAndDeploy.sh  generateGradient.cpp  generateSynthetics.cpp  inversion.bash  linearalgebra.cpp  linearalgebra.hpp  makeSynthetics.cpp  make_data.cpp  mc.cpp  mc.hpp  montecarlo.cpp  montecarlo.hpp  performance.txt  plotTomography.py  plotTrajectory.py  plotWalk.py  plot_data.py  plot_gradient.py  plot_multivariate.py  plot_multivariate_tomography.py  plot_samples.py  plot_trajectory.py  questions.txt  randomnumbers.cpp  randomnumbers.hpp  readme.MD  runSampling.cpp  runs.txt  (+8 more)
INPUT/: Recorded_time_sources_checkerboard_lr_100x100.txt  Recorded_time_sources_checkerboard_lr_10x10.txt  forward_matrix_input.txt  matrix.txt  parameters_starting_model.txt  parameters_synthetics_model.txt  prior_information.txt  setup.txt  synthetics.txt  tomography_matrix.txt  tomography_synthetics.txt
analysis/: chain.py  inference.py  joint.py  mcmcESS.R
docs/: _config.yml  annotated.html  auxiliary_8cpp.html  auxiliary_8cpp_source.html  auxiliary_8hpp.html  auxiliary_8hpp__dep__incl.map  auxiliary_8hpp_source.html  classdata-members.html  classdata.html  classdata__coll__graph.md5  classes.html  classforwardModel-members.html  classforwardModel.html  classforwardModel__coll__graph.map  classforwardModel__coll__graph.md5  classmontecarlo-members.html  classmontecarlo.html  classmontecarlo__coll__graph.map  classmontecarlo__coll__graph.md5  classposterior-members.html  classposterior.html  classprior-members.html  classprior.html  classprior__coll__graph.map  classprior__coll__graph.md5  config.dox  custom_css.css  files.html  fix.js  functions.html  functions_func.html  functions_vars.html  generateGradient_8cpp.html  generateGradient_8cpp__incl.md5  generateGradient_8cpp_source.html  generateSynthetics_8cpp.html  generateSynthetics_8cpp__incl.map  generateSynthetics_8cpp_source.html  globals.html  globals_func.html  (+26 more)
docs/html/: CMakeLists_8txt.html  annotated.html  auxiliary_8cpp.html  auxiliary_8cpp__incl.map  auxiliary_8cpp__incl.md5  auxiliary_8hpp.html  auxiliary_8hpp__dep__incl.md5  auxiliary_8hpp_source.html  classdata-members.html  classdata.html  classes.html  classforwardModel-members.html  classforwardModel.html  classmontecarlo-members.html  classmontecarlo.html  classmontecarlo__coll__graph.map  files.html  (+71 more)
doxygen/: GitHubPagesConfiguration  custom_css.css  custom_footer.html  custom_header.html  fix.js
doxygen_docs/: .header.html.swp  DoxygenLayout.xml  configuration  custom_header.html  header.html  travis-configuration
inversions/: inversion.bash  inversion1.bash  inversion2.bash  inversion3.bash
plotting/: plot_multivariate.py  plot_multivariate_tomography.py  plot_samples.py
src/: check.py  visualize_post.py
test/: HMC_lin_inv.bash  inversion-diagonal.bash  inversion-unit.bash  inversion.bash  inversion_diagonal.bash  inversion_diagonal_10e4.bash  inversion_full.bash  inversion_full_10e4.bash  inversion_full_diagonal_kinetic.bash  inversion_full_diagonal_mass.bash  inversion_full_layered.bash  inversion_full_not_ergodic.bash  inversion_full_resonance.bash  inversion_unit.bash  inversion_unit_10e4.bash  setup.bash
thoughts/: recap.tex  simple_linear.tex  sources.bib  sources.tex  thoughts.tex
(+119 files in other folders)
